--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  @apply text-zinc-500;
+}
+
+.aspect-1 {
+  aspect-ratio: 1;
+}
